Added FormViewController Scene

--- a/Clean Swift HELM/Scene.xctemplate/TemplateInfo.plist
+++ b/Clean Swift HELM/Scene.xctemplate/TemplateInfo.plist
@@ -138,6 +138,7 @@
 				<string>UIViewController</string>
 				<string>UITableViewController</string>
 				<string>UICollectionViewController</string>
+				<string>FormViewController</string>
 			</array>
 		</dict>
 	</array>
